fix overflow

--- a/clock-app/public/style.css
+++ b/clock-app/public/style.css
@@ -15,7 +15,6 @@ body {
     background-size: cover;
     background-position: top center;
     position: relative;
-    overflow: hidden;
 }
 
 main {
